# python-project-50

./: .flake8  .gitignore  Makefile  README.md  asciinema.cast  coverage.xml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
gendiff/: constants.py  generate_diff.py  parser.py  tree.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
hexlet_code/: Makefile  parsers.py
hexlet_code/scripts/: gendiff.py  gendiff.py.save
hexlet_code/tests/: test_gendiff.py
tests/: test_gendiff.py
tests/fixtures/: expected_output_json.txt
