[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexlet-code"
version = "0.1.0"
description = "CLI tool for comparing configuration files"
authors = [{ name = "Anzhelika", email = "darkl11n3ss@gmail.com" }]
license = "MIT"

[tool.poetry.dependencies]
pyyaml = "^6.0"

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]
