[project]
name = "hexlet-code"
version = "0.1.0"
description = "CLI tool for comparing configuration files"
authors = [{ name = "Anzhelika", email = "darkl11n3ss@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "pyyaml",
    "pytest",
    "ruff"
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[project.optional-dependencies]
dev = ["flake8", "coverage"]
